<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="523dp"
        android:layout_above="@+id/start_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/small_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_margin">

            <TextView
                android:id="@+id/fragment_exercise_instructions_textview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/bridge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sensorid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/strength"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_text"
                android:textStyle="normal" />

            <Button
                android:id="@+id/count_popup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showcount"
                android:visibility="gone" />

            <Button
                android:id="@+id/play_video"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/large_margin"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-light"
                android:text="@string/playvideo"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/fragment_exercise_start_position"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/start_position"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/startbridge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/fragment_exercise_movement"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/movement"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/action"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/action_bridge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/fragment_exercise_reps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/rep"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/rep"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/ten_times"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/fragment_exercise_benefit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/exercise_benefit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/benefit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/benefit_bridge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/fragment_exercise_notes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/notes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/trunk_notes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/fragment_exercise_tips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/tips"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/tips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/bridging_tips_list"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_margin" />
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/start_button"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/extra_large_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="108dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:text="@string/instruction_button"
        android:textColor="@color/white"
        android:textSize="@dimen/extra_large_text" />


    <TextView
        android:id="@+id/rep_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="118dp"
        android:fontFamily="sans-serif"
        android:text="@string/_10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/extra_large_text" />

    <TextView
        android:id="@+id/time_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="161dp"
        android:layout_marginBottom="118dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/extra_large_text" />

    <TextView
        android:id="@+id/repstogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="124dp"
        android:text="@string/reps_to_go"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text" />

    <TextView
        android:id="@+id/secstogo"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="123dp"
        android:layout_toEndOf="@+id/time_countdown"
        android:text="@string/seconds_to_go"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text" />


    <Button
        android:id="@+id/pauseplay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="35dp"
        android:text="@string/pause"
        android:visibility="gone" />


    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="35dp"
        android:text="@string/stop"
        android:visibility="gone" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@+id/tryanother_button"
        android:text="@string/backtohome" />

    <Button
        android:id="@+id/tryanother_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="34dp"
        android:text="@string/tryanother" />


</RelativeLayout>
